// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statusIcon renders check icon 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="h-5 w-5"
    fill="none"
    stroke="#37D058"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</DocumentFragment>
`;

exports[`statusIcon renders clock icon 1`] = `
<DocumentFragment>
  <svg
    aria-hidden="true"
    class="h-5 w-5"
    fill="none"
    stroke="orange"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</DocumentFragment>
`;
